# src/core/dtos/outputs/pagination_output.ts
@@ -1,0 +1,31 @@
+export class PaginationOutputWith<T> {
+    meta: PaginationMeta;
+    data: T[];
+
+    private constructor() {
+    }
+
+    static new<T>({
+                      data,
+                      count,
+                      hasMore,
+                  }: {
+        data: T[];
+        count: number;
+        hasMore: boolean;
+    }) {
+        const p = new PaginationOutputWith();
+        p.meta = new PaginationMeta(count, hasMore);
+        p.data = data;
+    }
+}
+
+class PaginationMeta {
+    count: number;
+    hasMore: boolean;
+
+    constructor(count: number, hasMore: boolean) {
+        this.count = count;
+        this.hasMore = hasMore;
+    }
+}
