# src/core/types/tx.ts
@@ -10,6 +10,23 @@ export function prismaClient(tx?: Tx) {
     return tx;
 }
 
+export interface IdRecord {
+    id: number;
+}
+
+export interface FetchRecord<T = IdRecord> extends TxRecord {
+    where: T,
+}
+
+export interface CreateRecord<T> extends TxRecord {
+    data: T;
+}
+
+export interface UpdateRecord<T> extends TxRecord {
+    where: T;
+    data: Partial<T>;
+}
+
 export interface TxRecord {
     tx?: Tx;
 }
@@ -26,6 +43,14 @@ export interface UserRecord {
     password: string
 }
 
+export interface UserMovieRecord {
+    userMovieId: number;
+    userId: number;
+    movieId: number;
+    viewedAt: Date;
+    isFavorite: boolean;
+}
+
 export interface MovieRecord {
     movieId: number;
 }
@@ -34,3 +59,13 @@ export interface RatingRecord {
     ratingId: number;
     rating: number;
 }
+
+export interface PaginationRecord {
+    skip: number;
+    take: number;
+}
+
+export type Include<T extends Record<string, any>> = Partial<{ [K in keyof T]?: boolean }>;
+export type OrderBy<T extends Record<string, any>> = Partial<{ [K in keyof T]?: 'asc' | 'desc' }>;
+export type MovieInclude = Include<{ genre: string }>;
+export type MovieOrderBy = OrderBy<MovieRecord>;
