# swagger.yml
@@ -264,7 +264,6 @@ paths:
           schema:
             $ref: '#/components/schemas/InternalServerError'
 
-    
     delete:
       tags:
         - 'Users'
@@ -454,15 +453,87 @@ paths:
   #         schema:
   #           $ref: '#/components/schemas/InternalServerError'
 
+  /movies:
+    get:
+      tags:
+        - Movies
+      summary: '영화를 가져옵니다. query params로 필터링 합니다. 사용 가능한 query params는 열어서 참조'
+      # description: 기본 20개씩 가져와요.
+      parameters:
+        - $ref: '#/components/parameters/AfterQuery'
+        - $ref: '#/components/parameters/CountQuery'
+        - $ref: '#/components/parameters/Order'
+        - $ref: '#/components/parameters/Criteria'
+        - $ref: '#/components/parameters/Genre'
+        - $ref: '#/components/parameters/MoviesInclude'
+
+      responses:
+        200:
+          description: 성공적으로 영화를 가져온 경우
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/PaginationMoviesOutput'
+
+        400:
+          description: 'take, skip 범위 벗어난 경우..(query의 model 펼쳐서 참조)'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+                example: '입력 값이 구데긴대요?'
+
+        500:
+          description: '서버 오류가 발생한 경우'
+          schema:
+            $ref: '#/components/schemas/InternalServerError'
+
+  /users/me/movies:
+    get:
+      tags:
+        - Movies
+      summary: '내가 본 영화를 가져옵니다. query params로 필터링 합니다. 사용 가능한 query params는 열어서 참조'
+      # description: 기본 20개씩 가져와요.
+      parameters:
+        - $ref: '#/components/parameters/AfterQuery'
+        - $ref: '#/components/parameters/CountQuery'
+        - $ref: '#/components/parameters/MoviesInclude'
+        - $ref: '#/components/parameters/UserMoviesFilter'
+
+      responses:
+        200:
+          description: 성공적으로 영화를 가져온 경우
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/PaginationMoviesOutput'
+
+        400:
+          description: 'take, skip 범위 벗어난 경우..(query의 model 펼쳐서 참조)'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+                example: '입력 값이 구데긴대요?'
+
+        500:
+          description: '서버 오류가 발생한 경우'
+          schema:
+            $ref: '#/components/schemas/InternalServerError'
+
+
   /movies/popular:
     get:
       tags:
         - Movies
+      deprecated: true
       summary: 유명한 영화 순번대로 가져옴니다
       # description: 기본 20개씩 가져와요.
       parameters:
-        - $ref: '#/components/parameters/SkipQuery'
-        - $ref: '#/components/parameters/TakeQuery'
+        - $ref: '#/components/parameters/AfterQuery'
+        - $ref: '#/components/parameters/CountQuery'
 
       responses:
         200:
@@ -564,8 +635,8 @@ paths:
         - Users
         - Movies
       parameters:
-        - $ref: '#/components/parameters/SkipQuery'
-        - $ref: '#/components/parameters/TakeQuery'
+        - $ref: '#/components/parameters/AfterQuery'
+        - $ref: '#/components/parameters/CountQuery'
         - $ref: '#/components/parameters/AccessTokenCookie'
 
       responses:
@@ -727,25 +798,134 @@ components:
       schema:
         type: string
 
-    SkipQuery:
+    #    MoviesInclude:
+    #      in: query
+    #      name: include
+    #      description: ?include=review (data 포함 여부)
+    #      required: false
+    #      type: string
+    #      nullable: true
+    #      example: review
+    #      default: null
+
+    AfterQuery:
       in: query
-      name: skip
-      description: $skip개 이후 가져오기
+      name: after
+      description: $after(id) 이후 가져오기. 생략 시 정렬순
       required: false
-      schema:
-        type: integer
-        default: 0
-        minimum: 0
-    TakeQuery:
+      type: integer
+      default: null
+      minimum: 1
+      nullable: true
+      example: 10442
+
+    CountQuery:
       in: query
-      name: take
-      description: $skip개 이후 $take개 가져오기(최소 10)
+      name: count
+      description: $after 이후 $count 가져오기(최소 10)
       required: false
-      schema:
-        type: integer
-        minimum: 10
-        maximum: 100
-        default: 20
+      type: integer
+      minimum: 10
+      maximum: 100
+      default: 20
+      example: 40
+
+
+    Order:
+      name: order
+      in: query
+      type: string
+      enum: [ "asc", "desc" ]
+      description: "기본값 'desc', 정렬 순서를 결정합니다. asc는 오름차순, desc는 내림차순입니다."
+      default: 'desc'
+
+    UserMoviesFilter:
+      name: filter
+      in: query
+      type: string
+      enum: [ "recentlyViewed", "favorite" ]
+      description: "최근 본거 or 좋아요 누른거"
+      default: 'recentlyViewed'
+      nullable: true
+      example: 'recentlyViewed'
+
+
+    Criteria:
+      name: criteria
+      in: query
+      type: string
+      enum: [ "popularity", "voteAverage", "releaseDate" ]
+      description: "기본값 'releaseDate', 정렬 기준을 결정합니다. popularity는 인기순, voteAverage는 평점순, releaseDate는 개봉일 순입니다."
+      default: 'releaseDate'
+
+    MoviesInclude:
+      name: include
+      in: query
+      type: string
+      enum:
+        - "review"
+      default: null
+      nullable: true
+      description: movies 가져올 때 review 딸려올지 말지
+      example: review
+
+
+    Genre:
+      in: query
+      name: genre
+      type: string
+      enum:
+        - '*'
+        - Action
+        - Adventure
+        - Animation
+        - Comedy
+        - Crime
+        - Documentary
+        - Drama
+        - Family
+        - Fantasy
+        - History
+        - Horror
+        - Music
+        - Mystery
+        - Romance
+        - Science Fiction
+        - Thriller
+        - TV Movie
+        - War
+        - Western
+      default: '*'
+
+    Genres:
+      name: genres
+      type: array
+      items:
+        type: string
+        enum:
+          - '*'
+          - Action
+          - Adventure
+          - Animation
+          - Comedy
+          - Crime
+          - Documentary
+          - Drama
+          - Family
+          - Fantasy
+          - History
+          - Horror
+          - Music
+          - Mystery
+          - Romance
+          - Science Fiction
+          - Thriller
+          - TV Movie
+          - War
+          - Western
+        style: form
+        example: [ War, Western ]
+
 
   schemas:
     InvalidRequestBodyError:
@@ -1027,6 +1207,27 @@ components:
         - title
         - content
         - rating
+
+    PaginationMoviesOutput:
+      type: object
+      properties:
+        meta:
+          type: object
+          $ref: '#/components/schemas/PaginationMeta'
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/MovieOutput'
+
+    PaginationMeta:
+      type: object
+      properties:
+        count:
+          type: integer
+          example: 20
+        hasMore:
+          type: boolean
+          example: true
 
     MovieOutput:
       type: object
